--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,10 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: inherit;}
 
 
 body{
+  overflow-y: scroll;
+width: 100%;
+height: 100%;
+margin:25% 0 ;
 display: flex;
 justify-content: center;
 align-items: center;
@@ -42,6 +46,7 @@ flex-direction: column;
   font-family: 'Tahoma', Arial, sans-serif;
   letter-spacing: 0.5vh;
   background: #cacaca;
+
 }
 p{
   color: #b52b27;
@@ -92,7 +97,7 @@ font-family: 'Tahoma', Arial, sans-serif;
   background-color: #ddd6ff;
   border: 1px solid #3527b5;
 }
-#dateInput {
+.dateInput {
   width: 10vw;
   font-size: 2vh;
   padding: 1%;
@@ -100,11 +105,11 @@ font-family: 'Tahoma', Arial, sans-serif;
   background: #f1eeff;
   border: 2px solid #c3b9f8;
 }
-#dateInput:focus {
+.dateInput:focus {
  border-color: #3527b5dc; /* Колір обрамлення при фокусуванні */
 }
 
-#textInput{
+.textInput{
 width: 10vw;
    font-size: 2vh;
    padding: 1%;
@@ -113,7 +118,7 @@ width: 10vw;
    border: 2px solid #cccc9ff6;
 }
 
-#textInput:focus {
+.textInput:focus {
    border-color: #979926;
 }
 #errorMessage::before {
@@ -148,7 +153,7 @@ border: 1px solid #2775b5;
   cursor: pointer;
 }
 
-#helpText {
+.helpText {
   display: none;
   flex-direction: column;
   animation: blink 2s normal;
@@ -188,7 +193,7 @@ border: 1px solid #2775b5;
   border-color: #458b4e;
   background: #508f4e;
  }
- .wrongMessage{
+.wrongMessage{
   display: none;
   margin-top: 2%;
   color: #2c2c2c;
@@ -201,15 +206,3 @@ border: 1px solid #2775b5;
   color: #b52b27;
    border: 1px solid #b52b27;
 }
-
-.defaultStyle {
-  width: 200px;
-  height: 200px;
-  background-color: blue;
-  transition: background-color 0.5s;
-}
-
-.updatedStyle {
-  background-color: red;
-}
-
