--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,7 @@ color: #b52b27;
   content: "\26A0";
   font-size: 5vh;
   color: #b52b27;
+  animation: blink 2s ease-in-out forwards;
 }
 /* 2nd Message */
 .error-message:nth-child(3){
@@ -164,7 +165,7 @@ border: 1px solid #2775b5;
 .error-message:nth-child(5){
       background-color: #d0ffce;
       border: 1px solid #27b53a;
-      transition: background-color 0.3s, color 0.5s, border-color 0.7s, text-shadow 0.6s;
+      transition: background-color 0.6s, color 0.6s, border-color 0.6s, text-shadow 0.6s;
  }
 
  .passwordInput{
@@ -174,7 +175,7 @@ border: 1px solid #2775b5;
    border-radius: 15px;
    background: #daf8d9;
    border: 2px solid #5ead68a9;
-   transition: background-color 0.3s, color 0.6s, border-color 0.6s, text-shadow 0.7s;
+   transition: background-color 0.6s, color 0.6s, border-color 0.6s, text-shadow 0.6s;
  }
 
  .passwordInput:focus{
@@ -191,7 +192,7 @@ border: 1px solid #2775b5;
    background: #85eb81;
    border: 2px solid #5ead68a9;
    text-shadow: 1px 2px 2px #315536;
-   transition: background-color 0.3s, color 0.6s, border-color 0.6s, text-shadow 0.7s;
+   transition: background-color 0.6s, color 0.6s, border-color 0.6s, text-shadow 0.6s;
  }
 
  .buttonInput:active{
@@ -205,9 +206,8 @@ border: 1px solid #2775b5;
   text-shadow: 1px 2px 2px #cfa69e;
 }
 
-
 /*! -------------------------------- */
-.error-message:nth-child(5) .titleOfMessage {
+/* .error-message:nth-child(5) .titleOfMessage {
   color: #27b53ac2;
 }
 .wrongMessage{
@@ -232,8 +232,10 @@ text-shadow: 1px 2px 2px #315536;
  }
  .passwordInput:focus{
   border-color: #458b4e;
- }
+ } */
 /*! -------------------------------- */
+
+/*? -------------------------------- */
 /* .error-message:nth-child(5){
 
   background-color: #ffebe6;
@@ -263,3 +265,4 @@ text-shadow: 1px 2px 2px #315536;
  .passwordInput:focus{
   border-color: #b60b05;
  } */
+/*? -------------------------------- */
